# liblmhash

./: .gitignore  CMakeLists.txt
include/: lm_hash.h
src/: lm_hash.c  main.c
